[package]
name = "rustwrap"
version = "1.0.2"
edition = "2021"

description = "A tool that helps wrap binary releases for easy distribution"
authors = ["Dotan Nahum <dotan@rng0.io>"]
documentation = "https://docs.rs/rustwrap/"
repository = "https://github.com/rusty-ferris-club/rustwrap"
keywords = ["generator", "package", "release"]
license = "Apache-2.0"
readme = "../README.md"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/rustwrap-x86_64-windows.zip"
bin-dir = "rustwrap-x86_64-pc-windows-msvc/rustwrap.exe"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rustwrap-x86_64-macos.tar.xz"
bin-dir = "rustwrap-x86_64-apple-darwin/rustwrap"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/rustwrap-aarch64-macos.tar.xz"
bin-dir = "rustwrap-x86_64-macos/rustwrap"
pkg-fmt = "txz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/rustwrap-x86_64-linux.tar.xz"
bin-dir = "rustwrap-x86_64-linux/rustwrap"
pkg-fmt = "txz"


[dependencies]

clap = { version = "4", features = ["cargo"] }
indicatif = "0.17.2"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89", features = ["preserve_order"] }
serde_yaml = "0.9.14"
serde_variant = "0.1.1"
fs-err = "2.9.0"
sha2 = "0.10.6"
regex = "1.7.0"
anyhow = "1.0.66"
console = "^0.15.0"
itertools = "0.10.5"
decompress = { version = "0.1.0", default-features = false, features = [
  "zip",
  "targz",
  "tarxz",
] }
tracing = "^0.1.34"
base64 = "0.20.0"
duct = "0.13.6"
tracing-tree = { version = "0.2.1" }
tracing-subscriber = { version = "^0.3.11", features = ["env-filter"] }


[dev-dependencies]
insta = { version = "1.17.1", features = ["backtrace", "redactions"] }
pretty_assertions = "1"
# rstest = "^0.14.0"
# serial_test = "0.4.0"
